cmake_minimum_required(VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
find_package(GLEW REQUIRED)
find_package(Cg REQUIRED)
find_package(Bullet REQUIRED)
find_package(OpenEXR REQUIRED)
find_package(Qt4 COMPONENTS QtCore QtGui REQUIRED)
set(QT_USE_QTOPENGL 1)
include(${QT_USE_FILE})
subdirs(media src)
